// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageCount plural 1`] = `
<a
  className="c-page-explorer__see-more"
  href="/admin/pages/1/"
>
  See all
  <span>
     5 pages
  </span>
  <Icon
    name="arrow-right"
  />
</a>
`;

exports[`PageCount works 1`] = `
<a
  className="c-page-explorer__see-more"
  href="/admin/pages/1/"
>
  See all
  <span>
     1 page
  </span>
  <Icon
    name="arrow-right"
  />
</a>
`;
